:bug: Portfolio item responsive gap

--- a/src/scss/layout/_portfolio.scss
+++ b/src/scss/layout/_portfolio.scss
@@ -127,14 +127,6 @@
 			text-indent: -99em;
 			overflow: hidden;
 		}
-		&:after{
-			content: '';
-			position: absolute;
-			top: -100px;
-			right: -100px;
-			left: -100px;
-			bottom: -100px;
-		}
 	}
 	.bg{
 		display: block;
